--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon ./server.js"
+    "dev": "nodemon ./server.js",
+    "debug": "nodemon --inspect server.js"
   },
   "keywords": [],
   "author": "",
@@ -13,7 +14,9 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "nodemailer": "^6.9.15",
     "nodemon": "^2.0.22",
+    "sib-api-v3-sdk": "^8.5.0",
     "sqlite3": "^5.1.6"
   }
 }
